--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,9 @@
       {{ site.author }}
     {%- endif -%}
   {% endcapture %}
- 
+  {% if author != "" %}
+  <meta name="author" content="{{ author }}">
+  {% endif %}
 
   <meta name="description" content="{{ description }}">
 
@@ -125,6 +127,11 @@
   {% endif %}
 
   {% if page.id %}
+  <meta property="og:type" content="article">
+  {% if author != "" %}
+  <meta property="og:article:author" content="{{ author }}">
+  {% endif %}
+  <meta property="og:article:published_time" content="{{ page.date | date_to_xmlschema }}">
   <meta property="og:url" content="{{ page.url | absolute_url }}">
   <link rel="canonical" href="{{ page.url | absolute_url }}">
   {% else %}
